--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^8.3.4",
+    "argon2": "^0.44.0",
     "astro": "^4.16.14",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
